refactor: add landing lazy

--- a/art_pages/art_2.html
+++ b/art_pages/art_2.html
@@ -349,7 +349,8 @@
     <div class="product-container">
         <!-- Image Section -->
         <div class="image-container">
-            <img id="mainImage" class="main-image" src="../images/2.jpg" alt="Artwork Name" onclick="toggleZoom()">
+            <img id="mainImage" class="main-image" loading="lazy" src="../images/2.jpg" alt="Artwork Name"
+                onclick="toggleZoom()">
 
             <!-- Slideshow Navigation -->
             <div class="slide-navigation">
@@ -359,7 +360,7 @@
 
             <!-- Gallery -->
             <div class="gallery">
-                <img class="active" src="../images/2.jpg" alt="Artwork 1 Thumbnail"
+                <img class="active" loading="lazy" src="../images/2.jpg" alt="Artwork 1 Thumbnail"
                     onclick="changeImage('../images/2.jpg')">
                 <img src="../images/2_1.jpg" alt="Artwork 2 Thumbnail" onclick="changeImage('../images/2_1.jpg')">
             </div>
@@ -390,8 +391,8 @@
     </div>
 
     <!-- Overlay for Zoom -->
-    <div id="zoomOverlay" class="overlay" onclick="toggleZoom()">
-        <img id="zoomImage" src="../images/2.jpg" alt="Zoomed Artwork">
+    <div id="zoomOverlay" loading="lazy" class="overlay" onclick="toggleZoom()">
+        <img id="zoomImage" loading="lazy" src="../images/2.jpg" alt="Zoomed Artwork">
     </div>
 
     <footer>
