--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
             <div class="gallery">
                 <div class="artwork">
                     <a href="./art_pages/art_1.html">
-                        <img src="./images/1.jpg" alt="Stop?">
+                        <img src="./images/1.jpg" alt="Stop?" loading="lazy">
                         <h3>"Stop?"</h3>
                         <p>Available</p>
                     </a>
@@ -374,7 +374,7 @@
 
                 <div class="artwork">
                     <a href="./art_pages/art_2.html">
-                        <img src="./images/2.jpg" alt="Flores à Iemanjá">
+                        <img src="./images/2.jpg" alt="Flores à Iemanjá" loading="lazy">
                         <h3>"Flores à Iemanjá"</h3>
                         <p>Available</p>
                     </a>
@@ -383,7 +383,7 @@
 
                 <div class="artwork">
                     <a href="./art_pages/art_3.html">
-                        <img src="./images/3.jpg" alt="Summer Vibe">
+                        <img src="./images/3.jpg" alt="Summer Vibe" loading="lazy">
                         <h3>"Summer Vibe"</h3>
                         <p>Available</p>
                     </a>
@@ -391,14 +391,14 @@
 
                 <div class="artwork">
                     <a href="./art_pages/art_4.html">
-                        <img src="./images/4.jpg" alt="I told you so">
+                        <img src="./images/4.jpg" alt="I told you so" loading="lazy">
                         <h3>"I Told You So"</h3>
                         <p>Available</p>
                     </a>
                 </div>
                 <div class="artwork">
                     <a href="./art_pages/art_0.html">
-                        <img src="./images/0.jpg" alt="Artwork">
+                        <img src="./images/0.jpg" alt="Artwork" loading="lazy">
                         <h3>—</h3>
                         <p>Prints available (original disappeared)</p>
                     </a>
@@ -406,7 +406,7 @@
 
                 <div class="artwork sold">
                     <a href="./art_pages/art_5.html">
-                        <img src="./images/5.jpg" alt="Artwork">
+                        <img src="./images/5.jpg" alt="Artwork" loading="lazy">
 
 
                     </a>
@@ -414,7 +414,7 @@
 
                 <div class="artwork">
                     <a href="./art_pages/art_6.html">
-                        <img src="./images/6.jpg" alt="Artwork">
+                        <img src="./images/6.jpg" alt="Artwork" loading="lazy">
                         <h3>"Pink Panther"</h3>
                         <p>NZ$560</p>
                     </a>
@@ -422,7 +422,7 @@
 
                 <div class="artwork">
                     <a href="./art_pages/art_7.html">
-                        <img src="./images/7.jpg" alt="Trust">
+                        <img src="./images/7.jpg" alt="Trust" loading="lazy">
                         <h3>"Trust"</h3>
                         <p>NZ$1800</p>
                     </a>
@@ -430,7 +430,7 @@
 
                 <div class="artwork">
                     <a href="./art_pages/art_8.html">
-                        <img src="./images/8.jpg" alt="Strike">
+                        <img src="./images/8.jpg" alt="Strike" loading="lazy">
                         <h3>"Strike"</h3>
                         <p>NZ$560</p>
                     </a>
@@ -438,7 +438,7 @@
 
                 <div class="artwork">
                     <a href="./art_pages/art_9.html">
-                        <img src="./images/9.jpg" alt="Let It Flow">
+                        <img src="./images/9.jpg" alt="Let It Flow" loading="lazy">
                         <h3>"Let It Flow"</h3>
                         <p>NZ$5600</p>
                     </a>
@@ -446,7 +446,7 @@
 
                 <div class="artwork">
                     <a href="./art_pages/art_10.html">
-                        <img src="./images/10.jpg" alt="Flowers">
+                        <img src="./images/10.jpg" alt="Flowers" loading="lazy">
                         <h3>"Flowers"</h3>
                         <p>NZ$560</p>
                     </a>
@@ -454,42 +454,42 @@
 
                 <div class="artwork sold">
                     <a href="./art_pages/art_11.html">
-                        <img src="./images/11.jpg" alt="Monkey Mind">
+                        <img src="./images/11.jpg" alt="Monkey Mind" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork sold">
                     <a href="./art_pages/art_12.html">
-                        <img src="./images/12.jpg" alt="Artwork">
+                        <img src="./images/12.jpg" alt="Artwork" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork sold">
                     <a href="./art_pages/art_13.html">
-                        <img src="./images/13.jpg" alt="Artwork">
+                        <img src="./images/13.jpg" alt="Artwork" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork sold">
                     <a href="./art_pages/art_14.html">
-                        <img src="./images/14.jpg" alt="Artwork">
+                        <img src="./images/14.jpg" alt="Artwork" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork sold">
                     <a href="./art_pages/art_15.html">
-                        <img src="./images/15.jpg" alt="Artwork">
+                        <img src="./images/15.jpg" alt="Artwork" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork">
                     <a href="./art_pages/art_16.html">
-                        <img src="./images/16.jpg" alt="Sorveteiro">
+                        <img src="./images/16.jpg" alt="Sorveteiro" loading="lazy">
                         <h3>"Sorveteiro"</h3>
                         <p>NZ$1800</p>
 
@@ -498,14 +498,14 @@
 
                 <div class="artwork sold">
                     <a href="./art_pages/art_17.html">
-                        <img src="./images/17.jpg" alt="Artwork">
+                        <img src="./images/17.jpg" alt="Artwork" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork">
                     <a href="./art_pages/art_18.html">
-                        <img src="./images/18.jpg" alt="Spirit">
+                        <img src="./images/18.jpg" alt="Spirit" loading="lazy">
                         <h3>"Spirit"</h3>
                         <p>NZ$560</p>
                     </a>
@@ -513,14 +513,14 @@
 
                 <div class="artwork sold">
                     <a href="./art_pages/art_19.html">
-                        <img src="./images/19.jpg" alt="Artwork">
+                        <img src="./images/19.jpg" alt="Artwork" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork">
                     <a href="./art_pages/art_20.html">
-                        <img src="./images/20.jpg" alt="Window">
+                        <img src="./images/20.jpg" alt="Window" loading="lazy">
                         <h3>"Window"</h3>
                         <p>NZ$360</p>
                     </a>
@@ -528,7 +528,7 @@
 
                 <div class="artwork">
                     <a href="./art_pages/art_21.html">
-                        <img src="./images/21.jpg" alt="Mens also cry">
+                        <img src="./images/21.jpg" alt="Mens also cry" loading="lazy">
                         <h3>"Mens Also Cry"</h3>
                         <p>NZ$1800</p>
                     </a>
@@ -536,7 +536,7 @@
 
                 <div class="artwork">
                     <a href="./art_pages/art_22.html">
-                        <img src="./images/22.jpg" alt="Eric's Room">
+                        <img src="./images/22.jpg" alt="Eric's Room" loading="lazy">
                         <h3>"Eric's Room"</h3>
                         <p>NZ$1800</p>
                     </a>
@@ -545,7 +545,7 @@
 
                 <div class="artwork">
                     <a href="./art_pages/art_23.html">
-                        <img src="./images/23.jpg" alt="Dainty">
+                        <img src="./images/23.jpg" alt="Dainty" loading="lazy">
                         <h3>"Dainty"</h3>
                         <p>NZ$1800</p>
                     </a>
@@ -553,7 +553,7 @@
 
                 <div class="artwork">
                     <a href="./art_pages/art_24.html">
-                        <img src="./images/24.jpg" alt="Koala">
+                        <img src="./images/24.jpg" alt="Koala" loading="lazy">
                         <h3>"Koala"</h3>
                         <p>NZ$1800</p>
                     </a>
@@ -561,14 +561,14 @@
 
                 <div class="artwork sold">
                     <a href="./art_pages/art_25.html">
-                        <img src="./images/25.jpg" alt="Artwork">
+                        <img src="./images/25.jpg" alt="Artwork" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork">
                     <a href="./art_pages/art_26.html">
-                        <img src="./images/26.jpg" alt="Justice">
+                        <img src="./images/26.jpg" alt="Justice" loading="lazy">
                         <h3>"Justice"</h3>
                         <p>NZ$3600</p>
                     </a>
@@ -576,7 +576,7 @@
 
                 <div class="artwork">
                     <a href="./art_pages/art_27.html">
-                        <img src="./images/27.jpg" alt="Kate">
+                        <img src="./images/27.jpg" alt="Kate" loading="lazy">
                         <h3>"Kate"</h3>
                         <p>NZ$180</p>
                     </a>
@@ -584,14 +584,14 @@
 
                 <div class="artwork sold">
                     <a href="./art_pages/art_28.html">
-                        <img src="./images/28.jpg" alt="Artwork">
+                        <img src="./images/28.jpg" alt="Artwork" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork">
                     <a href="./art_pages/art_29.html">
-                        <img src="./images/29.jpg" alt="Jack Frost">
+                        <img src="./images/29.jpg" alt="Jack Frost" loading="lazy">
                         <h3>"Jack Frost"</h3>
                         <p>NZ$10.800</p>
                     </a>
@@ -599,7 +599,7 @@
 
                 <div class="artwork">
                     <a href="./art_pages/art_30.html">
-                        <img src="./images/30.jpg" alt="Tamagochi">
+                        <img src="./images/30.jpg" alt="Tamagochi" loading="lazy">
                         <h3>"Tamagochi"</h3>
                         <p>NZ$360</p>
                     </a>
@@ -607,7 +607,7 @@
 
                 <div class="artwork">
                     <a href="./art_pages/art_31.html">
-                        <img src="./images/31.jpg" alt="Surf">
+                        <img src="./images/31.jpg" alt="Surf" loading="lazy">
                         <h3>"Surf"</h3>
                         <p>NZ$2400</p>
                     </a>
@@ -615,14 +615,14 @@
 
                 <div class="artwork sold">
                     <a href="./art_pages/art_32.html">
-                        <img src="./images/32.jpg" alt="Artwork">
+                        <img src="./images/32.jpg" alt="Artwork" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork sold">
                     <a href="./art_pages/art_33.html">
-                        <img src="./images/33.jpg" alt="Artwork">
+                        <img src="./images/33.jpg" alt="Artwork" loading="lazy">
 
 
                     </a>
@@ -630,13 +630,13 @@
 
                 <div class="artwork sold">
                     <a href="./art_pages/art_34.html">
-                        <img src="./images/34.jpg" alt="Self Protrait" />
+                        <img src="./images/34.jpg" alt="Self Protrait" loading="lazy" />
 
                     </a>
                 </div>
                 <div class="artwork notforsale">
                     <a href="./art_pages/art_35.html">
-                        <img src="./images/35.jpg" alt="Self Protrait">
+                        <img src="./images/35.jpg" alt="Self Protrait" loading="lazy">
                         <h3>"Self Protrait" feat. Mauricio Benega</h3>
 
                     </a>
