--- a/art_pages/art_1.html
+++ b/art_pages/art_1.html
@@ -349,7 +349,8 @@
     <div class="product-container">
         <!-- Image Section -->
         <div class="image-container">
-            <img id="mainImage" class="main-image" src="../images/1.jpg" alt="Artwork Name" onclick="toggleZoom()">
+            <img id="mainImage" loading="lazy" class="main-image" src="../images/1.jpg" alt="Artwork Name"
+                onclick="toggleZoom()">
 
             <!-- Slideshow Navigation -->
             <div class="slide-navigation">
@@ -359,10 +360,12 @@
 
             <!-- Gallery -->
             <div class="gallery">
-                <img class="active" src="../images/1.jpg" alt="Artwork 1 Thumbnail"
+                <img class="active" loading="lazy" src="../images/1.jpg" alt="Artwork 1 Thumbnail"
                     onclick="changeImage('../images/1.jpg')">
-                <img src="../images/1_1.jpg" alt="Artwork 2 Thumbnail" onclick="changeImage('../images/1_1.jpg')">
-                <img src="../images/1_3.jpg" alt="Artwork 2 Thumbnail" onclick="changeImage('../images/1_3.jpg')">
+                <img loading="lazy" src="../images/1_1.jpg" alt="Artwork 2 Thumbnail"
+                    onclick="changeImage('../images/1_1.jpg')">
+                <img loading="lazy" src="../images/1_3.jpg" alt="Artwork 2 Thumbnail"
+                    onclick="changeImage('../images/1_3.jpg')">
 
             </div>
         </div>
@@ -393,7 +396,7 @@
 
     <!-- Overlay for Zoom -->
     <div id="zoomOverlay" class="overlay" onclick="toggleZoom()">
-        <img id="zoomImage" src="../images/1.jpg" alt="Zoomed Artwork">
+        <img id="zoomImage" loading="lazy" src="../images/1.jpg" alt="Zoomed Artwork">
     </div>
 
     <footer>
