--- a/art_pages/art_10.html
+++ b/art_pages/art_10.html
@@ -349,7 +349,8 @@
     <div class="product-container">
         <!-- Image Section -->
         <div class="image-container">
-            <img id="mainImage" class="main-image" src="../images/10.jpg" alt="Artwork Name" onclick="toggleZoom()">
+            <img id="mainImage" loading="lazy" class="main-image" src="../images/10.jpg" alt="Artwork Name"
+                onclick="toggleZoom()">
 
             <!-- Slideshow Navigation -->
             <div class="slide-navigation">
@@ -359,7 +360,7 @@
 
             <!-- Gallery -->
             <div class="gallery">
-                <img class="active" src="../images/10.jpg" alt="Artwork 1 Thumbnail"
+                <img class="active" loading="lazy" src="../images/10.jpg" alt="Artwork 1 Thumbnail"
                     onclick="changeImage('../images/10.jpg')">
             </div>
         </div>
@@ -393,7 +394,7 @@
 
     <!-- Overlay for Zoom -->
     <div id="zoomOverlay" class="overlay" onclick="toggleZoom()">
-        <img id="zoomImage" src="../images/10.jpg" alt="Zoomed Artwork">
+        <img id="zoomImage" loading="lazy" src="../images/10.jpg" alt="Zoomed Artwork">
     </div>
 
     <footer>
