--- a/art_pages/art_20.html
+++ b/art_pages/art_20.html
@@ -348,7 +348,8 @@
     <div class="product-container">
         <!-- Image Section -->
         <div class="image-container">
-            <img id="mainImage" class="main-image" src="../images/20.jpg" alt="Artwork Name" onclick="toggleZoom()">
+            <img id="mainImage" loading="lazy" class="main-image" src="../images/20.jpg" alt="Artwork Name"
+                onclick="toggleZoom()">
 
             <!-- Slideshow Navigation -->
             <div class="slide-navigation">
@@ -358,9 +359,9 @@
 
             <!-- Gallery -->
             <div class="gallery">
-                <img class="active" src="../images/20.jpg" alt="Artwork 1 Thumbnail"
+                <img class="active" loading="lazy" src="../images/20.jpg" alt="Artwork 1 Thumbnail"
                     onclick="changeImage('../images/20.jpg')">
-                <img class="active" src="../images/20_1.jpg" alt="Artwork 2 Thumbnail"
+                <img class="active" loading="lazy" src="../images/20_1.jpg" alt="Artwork 2 Thumbnail"
                     onclick="changeImage('../images/20_1.jpg')">
 
             </div>
@@ -395,7 +396,7 @@
 
     <!-- Overlay for Zoom -->
     <div id="zoomOverlay" class="overlay" onclick="toggleZoom()">
-        <img id="zoomImage" src="../images/20.jpg" alt="Zoomed Artwork">
+        <img id="zoomImage" loading="lazy" src="../images/20.jpg" alt="Zoomed Artwork">
     </div>
 
     <footer>
