--- a/art_pages/art_3.html
+++ b/art_pages/art_3.html
@@ -349,7 +349,8 @@
     <div class="product-container">
         <!-- Image Section -->
         <div class="image-container">
-            <img id="mainImage" class="main-image" src="../images/3.jpg" alt="Artwork Name" onclick="toggleZoom()">
+            <img id="mainImage" loading="lazy" class="main-image" src="../images/3.jpg" alt="Artwork Name"
+                onclick="toggleZoom()">
 
             <!-- Slideshow Navigation -->
             <div class="slide-navigation">
@@ -359,9 +360,10 @@
 
             <!-- Gallery -->
             <div class="gallery">
-                <img class="active" src="../images/3.jpg" alt="Artwork 1 Thumbnail"
+                <img loading="lazy" class="active" src="../images/3.jpg" alt="Artwork 1 Thumbnail"
                     onclick="changeImage('../images/3.jpg')">
-                <img src="../images/3_1.jpg" alt="Artwork 2 Thumbnail" onclick="changeImage('../images/3_1.jpg')">
+                <img loading="lazy" src="../images/3_1.jpg" alt="Artwork 2 Thumbnail"
+                    onclick="changeImage('../images/3_1.jpg')">
             </div>
         </div>
 
@@ -391,7 +393,7 @@
 
     <!-- Overlay for Zoom -->
     <div id="zoomOverlay" class="overlay" onclick="toggleZoom()">
-        <img id="zoomImage" src="3.jpg" alt="Zoomed Artwork">
+        <img id="zoomImage" loading="lazy" src="3.jpg" alt="Zoomed Artwork">
     </div>
 
     <footer>
