--- a/art_pages/art_4.html
+++ b/art_pages/art_4.html
@@ -349,7 +349,8 @@
     <div class="product-container">
         <!-- Image Section -->
         <div class="image-container">
-            <img id="mainImage" class="main-image" src="../images/4.jpg" alt="Artwork Name" onclick="toggleZoom()">
+            <img id="mainImage" loading="lazy" class="main-image" src="../images/4.jpg" alt="Artwork Name"
+                onclick="toggleZoom()">
 
             <!-- Slideshow Navigation -->
             <div class="slide-navigation">
@@ -359,10 +360,12 @@
 
             <!-- Gallery -->
             <div class="gallery">
-                <img class="active" src="../images/4.jpg" alt="Artwork 1 Thumbnail"
+                <img loading="lazy" class="active" src="../images/4.jpg" alt="Artwork 1 Thumbnail"
                     onclick="changeImage('../images/4.jpg')">
-                <img src="../images/4_1.jpg" alt="Artwork 2 Thumbnail" onclick="changeImage('../images/4_1.jpg')">
-                <img src="../images/4_2.jpg" alt="Artwork 3 Thumbnail" onclick="changeImage('../images/4_2.jpg')">
+                <img loading="lazy" src="../images/4_1.jpg" alt="Artwork 2 Thumbnail"
+                    onclick="changeImage('../images/4_1.jpg')">
+                <img loading="lazy" src="../images/4_2.jpg" alt="Artwork 3 Thumbnail"
+                    onclick="changeImage('../images/4_2.jpg')">
 
             </div>
         </div>
