feat: add fivicon

--- a/art_pages/art_0.html
+++ b/art_pages/art_0.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="icon" type="image/png" href="../images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <meta name="description"
         content="Delve deeper into the vibrant world of Karina Piha's art. Each piece tells a story, reflecting a blend of cultures and deep emotional resonance. Learn about the inspirations behind her paintings and discover the available artworks for purchase.">
 
