--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="./images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <meta name="description"
         content="Explore the vibrant artwork of Karina Piha, a Brazilian artist living in New Zealand. Her unique paintings blend European, Arab, and South American cultures, creating emotional and colorful masterpieces. Discover her latest exhibitions, available artworks, and more.">
     <title>Karina Piha - Artist</title>
