--- a/about.html
+++ b/about.html
@@ -7,8 +7,11 @@
     <meta name="description"
         content="Karina Piha is a Brazilian artist living in New Zealand, with European and Arab roots. Her vibrant artwork blends cultures, influenced by her life in Germany and around the world. A multi-lingual artist, she also practices art therapy, teaches Yoga Nidra and Ashtanga, and is a popular Airbnb Superhost. Karina’s work has been sold to high-profile clients and she is dedicated to charity work.">
     <title>About Me</title>
+    <link rel="icon" type="image/png" href="./images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;300;400&display=swap" rel="stylesheet">
-
+    <link rel="icon" type="image/png" href="assets/favicon.png">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         /* Reset básico */
         body,
