--- a/art_pages/art_30.html
+++ b/art_pages/art_30.html
@@ -7,6 +7,8 @@
     <meta name="description"
         content="Delve deeper into the vibrant world of Karina Piha's art. Each piece tells a story, reflecting a blend of cultures and deep emotional resonance. Learn about the inspirations behind her paintings and discover the available artworks for purchase.">
     <title>Artwork Details - Karina Piha</title>
+    <link rel="icon" type="image/png" href="../images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;300;400&display=swap" rel="stylesheet">
     <style>
         body {
