--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Get in touch with Karina Piha to inquire about her art, art therapy sessions, or to book her creative workshops. Karina is always open to connecting with new art enthusiasts and collaborators.">
     <title>Karina Piha - Artist</title>
+    <link rel="icon" type="image/png" href="./images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;300;400&display=swap" rel="stylesheet">
     <style>
         body {
@@ -38,7 +42,7 @@
 
             width: 100%;
             z-index: 3;
-            
+
         }
 
         .header ul {
