--- a/exhibitions.html
+++ b/exhibitions.html
@@ -8,6 +8,8 @@
         content="Discover Karina Piha's art exhibitions around the world. From gallery shows to unique events, explore her vibrant, culture-infused artwork and find out where to see it next.">
 
     <title>Karina Piha - Artist</title>
+    <link rel="icon" type="image/png" href="./images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;300;400&display=swap" rel="stylesheet">
     <style>
         body {
