feat: renomea pasta e arquivos da antiga art_pages

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         <section id="arts" class="art">
             <div class="gallery">
                 <div class="artwork">
-                    <a href="./art_pages/art_1.html">
+                    <a href="./art/1.html">
                         <img src="./images/1.jpg" alt="Stop?" loading="lazy">
                         <h3>"Stop?"</h3>
                         <p>Available</p>
@@ -375,7 +375,7 @@
 
 
                 <div class="artwork">
-                    <a href="./art_pages/art_2.html">
+                    <a href="./art/2.html">
                         <img src="./images/2.jpg" alt="Flores à Iemanjá" loading="lazy">
                         <h3>"Flores à Iemanjá"</h3>
                         <p>Available</p>
@@ -384,7 +384,7 @@
 
 
                 <div class="artwork">
-                    <a href="./art_pages/art_3.html">
+                    <a href="./art/3.html">
                         <img src="./images/3.jpg" alt="Summer Vibe" loading="lazy">
                         <h3>"Summer Vibe"</h3>
                         <p>Available</p>
@@ -392,14 +392,14 @@
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_pages/art_4.html">
+                    <a href="./art/4.html">
                         <img src="./images/4.jpg" alt="I told you so" loading="lazy">
                         <h3>"I Told You So"</h3>
                         <p>Available</p>
                     </a>
                 </div>
                 <div class="artwork">
-                    <a href="./art_pages/art_0.html">
+                    <a href="./art/0.html">
                         <img src="./images/0.jpg" alt="Artwork" loading="lazy">
                         <h3>—</h3>
                         <p>Prints available (original disappeared)</p>
@@ -407,7 +407,7 @@
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_pages/art_5.html">
+                    <a href="./art/5.html">
                         <img src="./images/5.jpg" alt="Artwork" loading="lazy">
 
 
@@ -415,7 +415,7 @@
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_pages/art_6.html">
+                    <a href="./art/6.html">
                         <img src="./images/6.jpg" alt="Artwork" loading="lazy">
                         <h3>"Pink Panther"</h3>
                         <p>NZ$560</p>
@@ -423,7 +423,7 @@
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_pages/art_7.html">
+                    <a href="./art/7.html">
                         <img src="./images/7.jpg" alt="Trust" loading="lazy">
                         <h3>"Trust"</h3>
                         <p>NZ$1800</p>
@@ -431,7 +431,7 @@
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_pages/art_8.html">
+                    <a href="./art/8.html">
                         <img src="./images/8.jpg" alt="Strike" loading="lazy">
                         <h3>"Strike"</h3>
                         <p>NZ$560</p>
@@ -439,7 +439,7 @@
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_pages/art_9.html">
+                    <a href="./art/9.html">
                         <img src="./images/9.jpg" alt="Let It Flow" loading="lazy">
                         <h3>"Let It Flow"</h3>
                         <p>NZ$5600</p>
@@ -447,7 +447,7 @@
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_pages/art_10.html">
+                    <a href="./art/10.html">
                         <img src="./images/10.jpg" alt="Flowers" loading="lazy">
                         <h3>"Flowers"</h3>
                         <p>NZ$560</p>
@@ -455,42 +455,42 @@
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_pages/art_11.html">
+                    <a href="./art/11.html">
                         <img src="./images/11.jpg" alt="Monkey Mind" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_pages/art_12.html">
+                    <a href="./art/12.html">
                         <img src="./images/12.jpg" alt="Artwork" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_pages/art_13.html">
+                    <a href="./art/13.html">
                         <img src="./images/13.jpg" alt="Artwork" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_pages/art_14.html">
+                    <a href="./art/14.html">
                         <img src="./images/14.jpg" alt="Artwork" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_pages/art_15.html">
+                    <a href="./art/15.html">
                         <img src="./images/15.jpg" alt="Artwork" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_pages/art_16.html">
+                    <a href="./art/16.html">
                         <img src="./images/16.jpg" alt="Sorveteiro" loading="lazy">
                         <h3>"Sorveteiro"</h3>
                         <p>NZ$1800</p>
@@ -499,14 +499,14 @@
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_pages/art_17.html">
+                    <a href="./art/17.html">
                         <img src="./images/17.jpg" alt="Artwork" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_pages/art_18.html">
+                    <a href="./art/18.html">
                         <img src="./images/18.jpg" alt="Spirit" loading="lazy">
                         <h3>"Spirit"</h3>
                         <p>NZ$560</p>
@@ -514,14 +514,14 @@
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_pages/art_19.html">
+                    <a href="./art/19.html">
                         <img src="./images/19.jpg" alt="Artwork" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_pages/art_20.html">
+                    <a href="./art/20.html">
                         <img src="./images/20.jpg" alt="Window" loading="lazy">
                         <h3>"Window"</h3>
                         <p>NZ$360</p>
@@ -529,7 +529,7 @@
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_pages/art_21.html">
+                    <a href="./art/21.html">
                         <img src="./images/21.jpg" alt="Mens also cry" loading="lazy">
                         <h3>"Mens Also Cry"</h3>
                         <p>NZ$1800</p>
@@ -537,7 +537,7 @@
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_pages/art_22.html">
+                    <a href="./art/22.html">
                         <img src="./images/22.jpg" alt="Eric's Room" loading="lazy">
                         <h3>"Eric's Room"</h3>
                         <p>NZ$1800</p>
@@ -546,7 +546,7 @@
 
 
                 <div class="artwork">
-                    <a href="./art_pages/art_23.html">
+                    <a href="./art/23.html">
                         <img src="./images/23.jpg" alt="Dainty" loading="lazy">
                         <h3>"Dainty"</h3>
                         <p>NZ$1800</p>
@@ -554,7 +554,7 @@
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_pages/art_24.html">
+                    <a href="./art/24.html">
                         <img src="./images/24.jpg" alt="Koala" loading="lazy">
                         <h3>"Koala"</h3>
                         <p>NZ$1800</p>
@@ -562,14 +562,14 @@
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_pages/art_25.html">
+                    <a href="./art/25.html">
                         <img src="./images/25.jpg" alt="Artwork" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_pages/art_26.html">
+                    <a href="./art/26.html">
                         <img src="./images/26.jpg" alt="Justice" loading="lazy">
                         <h3>"Justice"</h3>
                         <p>NZ$3600</p>
@@ -577,7 +577,7 @@
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_pages/art_27.html">
+                    <a href="./art/27.html">
                         <img src="./images/27.jpg" alt="Kate" loading="lazy">
                         <h3>"Kate"</h3>
                         <p>NZ$180</p>
@@ -585,14 +585,14 @@
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_pages/art_28.html">
+                    <a href="./art/28.html">
                         <img src="./images/28.jpg" alt="Artwork" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_pages/art_29.html">
+                    <a href="./art/29.html">
                         <img src="./images/29.jpg" alt="Jack Frost" loading="lazy">
                         <h3>"Jack Frost"</h3>
                         <p>NZ$10.800</p>
@@ -600,7 +600,7 @@
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_pages/art_30.html">
+                    <a href="./art/30.html">
                         <img src="./images/30.jpg" alt="Tamagochi" loading="lazy">
                         <h3>"Tamagochi"</h3>
                         <p>NZ$360</p>
@@ -608,7 +608,7 @@
                 </div>
 
                 <div class="artwork">
-                    <a href="./art_pages/art_31.html">
+                    <a href="./art/31.html">
                         <img src="./images/31.jpg" alt="Surf" loading="lazy">
                         <h3>"Surf"</h3>
                         <p>NZ$2400</p>
@@ -616,14 +616,14 @@
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_pages/art_32.html">
+                    <a href="./art/32.html">
                         <img src="./images/32.jpg" alt="Artwork" loading="lazy">
 
                     </a>
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_pages/art_33.html">
+                    <a href="./art/33.html">
                         <img src="./images/33.jpg" alt="Artwork" loading="lazy">
 
 
@@ -631,13 +631,13 @@
                 </div>
 
                 <div class="artwork sold">
-                    <a href="./art_pages/art_34.html">
+                    <a href="./art/34.html">
                         <img src="./images/34.jpg" alt="Self Protrait" loading="lazy" />
 
                     </a>
                 </div>
                 <div class="artwork notforsale">
-                    <a href="./art_pages/art_35.html">
+                    <a href="./art/35.html">
                         <img src="./images/35.jpg" alt="Self Protrait" loading="lazy">
                         <h3>"Self Protrait" feat. Mauricio Benega</h3>
 
