--- a/art/10.html
+++ b/art/10.html
@@ -399,9 +399,18 @@
         <img id="zoomImage" loading="lazy" src="../images/10.jpg" alt="Zoomed Artwork">
     </div>
 
+
     <footer>
-        <p>© 2024 Karina Piha. All rights reserved.</p>
+        <p>© <span id="current-year"></span> Karina Piha. All rights reserved.</p>
     </footer>
+
+    <script>
+        // Obtém o ano atual com base no horário do navegador
+        const currentYear = new Date().getFullYear();
+
+        // Insere o ano no elemento do footer
+        document.getElementById("current-year").textContent = currentYear;
+    </script>
 
     <script>
         let currentIndex = 0;
