--- a/index.html
+++ b/index.html
@@ -651,8 +651,15 @@
     </main>
 
     <footer>
-        <p>© 2024 Karina Piha. All rights reserved.</p>
+        <p>© <span id="current-year"></span> Karina Piha. All rights reserved.</p>
     </footer>
 </body>
+<script>
+    // Obtém o ano atual com base no horário do navegador
+    const currentYear = new Date().getFullYear();
+
+    // Insere o ano no elemento do footer
+    document.getElementById("current-year").textContent = currentYear;
+</script>
 
 </html>
