feat: add new artwork + start casa-da-karina

--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
 
                 <div class="artwork sold">
                     <a href="./art/34.html">
-                        <img src="./images/34.jpg" alt="Self Protrait" loading="lazy" />
+                        <img src="./images/34.jpg" alt="Artwork" loading="lazy" />
 
                     </a>
                 </div>
@@ -643,7 +643,12 @@
 
                     </a>
                 </div>
+                <div class="artwork sold">
+                    <a href="./art/36.html">
+                        <img src="./images/36.jpg" alt="Artwork" loading="lazy">
 
+                    </a>
+                </div>
 
             </div>
         </section>
