fix: muda o formato da foto

--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                 </div>
                 <div class="artwork sold">
                     <a href="./art/36.html">
-                        <img src="./images/36.jpg" alt="Artwork" loading="lazy">
+                        <img src="./images/36.png" alt="Artwork" loading="lazy">
 
                     </a>
                 </div>
