Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -622,10 +622,11 @@
                     </a>
                 </div>
 
-                <div class="artwork sold">
+                <div class="artwork">
                     <a href="./art/33.html">
                         <img src="./images/33.jpg" alt="Artwork" loading="lazy">
-
+ <h3>-</h3>
+                        <p>NZ$2000</p>
 
                     </a>
                 </div>
